@@ -2,6 +2,8 @@
 Top of CVS tree:
 ------------------------------------------------------------------------------
 
+common/commands.c: actually read the right amount of data on an updspell
+--
 Add spell listing support to gcfclient and common, in particular:
 common/client.c: addspell, updspell, delspell function pointers, send
    spellmon in setup
